routing fixings and page overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -17,11 +17,12 @@
   }
 }
 
-
 body {
   background-color: white;
+  overflow-x: hidden;
   font-family: "Instrument Sans", Arial, Helvetica, sans-serif;
 }
+
 html {
   scroll-behavior: smooth;
 }
